# vismaran

./: .env.example  .gitignore  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  SPEC.md  docker-compose.yml  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: adapter_request.yml  bug_report.yml  config.yml
.github/workflows/: ci.yml
docker/: tensorzero.toml
docker/postgres-init/: 01-pgvector-and-provenance.sql
docs/architecture/: 1-component.mmd  2-ingest.mmd  3-erasure.mmd  4-threat.mmd  5-adapter.mmd  README.md
examples/fastapi_demo/: README.md
examples/fastapi_demo/backend/: agent.py  app.py  erase_tool.py  seed.py
src/vismaran/: __init__.py  cli.py  exceptions.py  orchestrator.py  provenance.py  receipt.py  types.py
src/vismaran/adapters/: __init__.py  base.py  cognee_graph.py  pgvector_vector.py  tensorzero_log.py
src/vismaran/application/: __init__.py  orchestrator.py  ports.py
src/vismaran/domain/: __init__.py  errors.py  identifiers.py
src/vismaran/domain/erasure/: __init__.py  results.py  scope.py
src/vismaran/domain/provenance/: __init__.py  record.py
src/vismaran/domain/receipt/: __init__.py  receipt.py
src/vismaran/infrastructure/: __init__.py
src/vismaran/infrastructure/adapters/: __init__.py  cognee_graph.py  pgvector_vector.py  tensorzero_log.py
src/vismaran/infrastructure/crypto/: __init__.py  ed25519_signer.py
src/vismaran/infrastructure/persistence/: __init__.py  provenance_pg.py
src/vismaran/interfaces/: __init__.py  cli.py
src/vismaran_sdk/: __init__.py  cognee_wrap.py  tag.py  tensorzero_wrap.py
tests/: conftest.py  test_cognee_adapter.py  test_cognee_wrap.py  test_orchestrator.py  test_orchestrator_integration.py  test_pgvector_adapter.py  test_provenance.py  test_receipt.py  test_tag.py  test_tensorzero_adapter.py
