[project]
name = "vismaran"
version = "0.1.0a0"
description = "DPDP / GDPR Article 17 right-to-be-forgotten for AI agent memory. Provable erasure across graph, vector, and log layers, with a signed deletion receipt a regulator can verify."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.12"
authors = [{ name = "Manish Pande", email = "morellato26@gmail.com" }]
keywords = ["dpdp", "gdpr", "right-to-be-forgotten", "ai-agents", "agent-memory", "data-erasure", "compliance"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Security",
    "Topic :: Software Development :: Libraries",
]
dependencies = [
    "pydantic>=2.5",
    "httpx>=0.27",
    "cryptography>=42",
    "click>=8.1",
    "structlog>=24",
]

[project.optional-dependencies]
cognee = ["cognee[neo4j]>=1.1.0"]
pgvector = ["asyncpg>=0.29", "pgvector>=0.3"]
tensorzero = []
all = ["vismaran[cognee,pgvector,tensorzero]"]
demo = [
    "vismaran[all]",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "jinja2>=3.1",
    "python-multipart>=0.0.12",
    "langgraph>=0.2",
    "anthropic>=0.40",
]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.24",
    "ruff>=0.7",
    "pyright>=1.1",
]

[project.scripts]
vismaran = "vismaran.cli:main"

[project.urls]
Homepage = "https://github.com/sambhal-labs/vismaran"
Source = "https://github.com/sambhal-labs/vismaran"
Issues = "https://github.com/sambhal-labs/vismaran/issues"
Author = "https://manishpande.in"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/vismaran", "src/vismaran_sdk"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-ra --strict-markers"
markers = [
    "integration: requires the docker-compose stack to be running (deselect with -m 'not integration')",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM", "RUF"]

[tool.pyright]
pythonVersion = "3.12"
typeCheckingMode = "standard"
include = ["src", "tests", "examples"]
